src/objects/QPMS__BatchApexError__c.object
<CustomObject>
    <description>This object is used to capture detail batch apex errors.</description>
    <fields>
        <fullName>QPMS__AsyncApexJobId__c</fullName>
        <label>AsyncApexJobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__BatchApexErrorLog__c</fullName>
        <label>Batch Apex Error Log</label>
        <referenceTo>QPMS__BatchApexErrorLog__c</referenceTo>
        <relationshipLabel>Batch Apex Errors</relationshipLabel>
        <relationshipName>BatchApexErrors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QPMS__DoesExceedJobScopeMaxLength__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Exceed Job Scope Max Length</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__ErrorScope__c</fullName>
        <label>ErrorScope</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__ExceptionType__c</fullName>
        <label>Exception Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__FailedRecords__c</fullName>
        <label>FailedRecords</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__IsTriggeredFromEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTriggeredFromEvent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__JobApexClass__c</fullName>
        <label>Job Apex Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__JobScope__c</fullName>
        <label>Job Scope</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Message__c</fullName>
        <label>Message</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__RequestId__c</fullName>
        <label>Request Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__ScopeCount__c</fullName>
        <label>ScopeCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__StackTrace__c</fullName>
        <label>Stack Trace</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__TimesReExecuted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#TimesReExecuted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Batch Apex Error</label>
    <nameField>
        <displayFormat>JOBE-{00000000}</displayFormat>
        <label>Batch Apex Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Apex Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>